add touch move event

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html, body {
     background: gray;
     display: flex;
     justify-content: center;
+    max-height: 100%;
 }
 
 .wrap{
@@ -18,6 +19,7 @@ html, body {
     margin: auto;
 
     height: 500px;
+    max-height: 500px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
